init carousel, added section panel and stylings add testimonials carousel * using slider-pro plugin obtained from bower * config file for carousel sits at init-carousel.js

--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,11 @@
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/slider-pro/dist/css/slider-pro.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
   </head>
@@ -194,6 +192,151 @@
         </div>
       </div>
       </div>
+    </section>
+
+    <section class="Panel Panel--lightBlue Panel--solidLightBlue" id="testimonials">
+      <div class="Panel-title">
+        <div class="Panel-titleImage"></div>
+        <div class="Panel-heading">Precious</div>
+        <div class="Panel-subHeading">Testimonials</div>
+      </div>
+      <div class="Testimonial-quoteMark"></div>
+
+      <div class="slider-pro u-marginSmall" id="slider">
+          <div class="sp-slides">
+              <!-- Slide 1 -->
+              <div class="sp-slide">
+                <div class="Testimonial">
+                  <p class="Testimonial-text">
+                    I joined a great VC company in the Bay Area as a senior hire and this would not have happened without the introduction from West to West.
+                  </p>
+                  <hr class="Testimonial-separator u-marginSmall" />
+                  <div class="Testimonial-author u-marginSmall">
+                    Nuno P.
+                  </div>
+                  <div class="Testimonial-authorBackground">Partner at Delta Partners Group</div>
+                </div>
+              </div>
+
+              <!-- Slide 2 -->
+              <div class="sp-slide">
+                <div class="Testimonial">
+                  <p class="Testimonial-text">
+					          West to West team is always available to help others and to share their insights.
+				          </p>
+                  <p class="Testimonial-text">
+                    What really drives them is the possibility to positively impact people's lives through technology.
+                  </p>
+                  <hr class="Testimonial-separator u-marginSmall" />
+                  <div class="Testimonial-author u-marginSmall">
+					          Helder Machado
+				          </div>
+                  <div class="Testimonial-authorBackground">
+					          Founder at Hunting Health
+				          </div>
+                </div>
+              </div>
+
+              <!-- Slide 3 -->
+              <div class="sp-slide">
+                <div class="Testimonial">
+                  <p class="Testimonial-text">
+					          Navigating the US entrepreneurial ecosystem is challenging, and the West to West team can help founders more efficiently allocate their time and resources when coming to the US for the short-term or long.
+				          </p>
+                  <hr class="Testimonial-separator u-marginSmall" />
+                  <div class="Testimonial-author u-marginSmall">
+					          Sandra S.
+				          </div>
+                  <div class="Testimonial-authorBackground">
+					          Director of Strategic Partnerships, EyeSee Solutions
+				          </div>
+                </div>
+              </div>
+
+              <!-- Slide 4 -->
+              <div class="sp-slide">
+                  <div class="Testimonial">
+                      <p class="Testimonial-text">
+                          West to West is doing a phenomenal job in bridging the wide gap that exists between promising tech startups in Portugal and Silicon Valley's talent pool, influencers, and investors.
+                      </p>
+                      <hr class="Testimonial-separator u-marginSmall" />
+                      <div class="Testimonial-author u-marginSmall">
+                          Ata R.
+                      </div>
+                      <div class="Testimonial-authorBackground">
+                          Vice President, Product Management at Funambol
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Slide 5 -->
+              <div class="sp-slide">
+                  <div class="Testimonial">
+                      <p class="Testimonial-text">
+                          West to West is an example of what great people should do: return to the society and economy a share of what they have earned.
+                      </p>
+                      <hr class="Testimonial-separator u-marginSmall" />
+                      <div class="Testimonial-author u-marginSmall">
+                          Victor B.
+                      </div>
+                      <div class="Testimonial-authorBackground">
+                          VP Research and Co-Founder at Present Technologies
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Slide 6 -->
+              <div class="sp-slide">
+                  <div class="Testimonial">
+                      <p class="Testimonial-text">
+                          West to West's mentorship and advice was very insightful and friendly, and made us feel welcome 6,000 miles away from home.
+                      </p>
+                      <hr class="Testimonial-separator u-marginSmall" />
+                      <div class="Testimonial-author u-marginSmall">
+                          Diogo O.
+                      </div>
+                      <div class="Testimonial-authorBackground">
+                          CEO & Co-founder of Line Health
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Slide 7 -->
+              <div class="sp-slide">
+                  <div class="Testimonial">
+                      <p class="Testimonial-text">
+                          West to West gave us great insight on the startup scene in the US. They manage to understand your point of view and goals, helping you achieve them through their network.
+                      </p>
+                      <hr class="Testimonial-separator u-marginSmall" />
+                      <div class="Testimonial-author u-marginSmall">
+                          Andreia M.
+                      </div>
+                      <div class="Testimonial-authorBackground">
+                          Account Manager | Client Manager | Marketing
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Slide 8 -->
+              <div class="sp-slide">
+                  <div class="Testimonial">
+                      <p class="Testimonial-text">
+                          I met the team during a networking event in San Francisco. They were quick to pick up the subtleties of a specific situation and go straight to the bottom line.
+                      </p>
+                      <hr class="Testimonial-separator u-marginSmall" />
+                      <div class="Testimonial-author u-marginSmall">
+                          Francisco R.
+                      </div>
+                      <div class="Testimonial-authorBackground">
+                          Co-Founder & General Manager at Sceelix
+                      </div>
+                  </div>
+              </div>
+
+          </div>
+      </div>
+
+
     </section>
 
     <section class="Panel Panel--blue Panel--cta" id="subscribe">
@@ -445,6 +588,7 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/slider-pro/dist/js/jquery.sliderPro.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -454,6 +598,7 @@
 
 
     <!-- build:js scripts/main.js -->
+    <script src="scripts/init-carousel.js"></script>
     <script src="scripts/nav.js"></script>
     <script src="scripts/menu.js"></script>
     <!-- endbuild -->
