Add logo to navbar

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <nav class="Nav Nav--onTop">
-      <div class="Nav-logo"></div>
+      <a href="/" class="Nav-logo"></a>
       <div class="Nav-links">
         <a href="/team.html" class="Nav-link">officers & board</a>
       </div>
