Fix errors before deploy
* Removing "board" section from index page
* Updating footer in team page
* Changing Linkedin logo in "Board & Officers" section in index

--- a/app/index.html
+++ b/app/index.html
@@ -389,7 +389,7 @@
               <div class="Person-name">PEDRO SANTOS VIEIRA</div>
               <div class="Person-company">GoodGuide</div>
               <div class="Person-job">VP, Data and Science</div>
-              <a target="_blank" href="https://www.linkedin.com/in/santosvieira"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/in/santosvieira"><img class="Person-link" src="images/linkedin-white@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -400,7 +400,7 @@
               <div class="Person-name">MARCO DE SÁ</div>
               <div class="Person-company">Twitter</div>
               <div class="Person-job">User Research Manager</div>
-              <a target="_blank" href="https://www.linkedin.com/in/marcodesa"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/in/marcodesa"><img class="Person-link" src="images/linkedin-white@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -411,7 +411,7 @@
               <div class="Person-name">ANGELA COSTA SIMÕES</div>
               <div class="Person-company">Red Roof Industries</div>
               <div class="Person-job">Founder</div>
-              <a target="_blank" href="https://www.linkedin.com/in/angelacostasimoes"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/in/angelacostasimoes"><img class="Person-link" src="images/linkedin-white@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -422,89 +422,13 @@
               <div class="Person-name">VASCO HENRIQUE MORAIS</div>
               <div class="Person-company">ATEL Capital Group</div>
               <div class="Person-job">General Counsel </div>
-              <a target="_blank" href="https://www.linkedin.com/pub/vasco-morais/0/89/610"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/pub/vasco-morais/0/89/610"><img class="Person-link" src="images/linkedin-white@2x.png"/></a>
             </div>
           </div>
         </div>
       </div>
       <div class="u-marginHalf">
         <a href="/team.html" target="_blank" class="Button Button--outline">See Full Team</a>
-      </div>
-    </section>
-
-    <section class="Panel Panel--solidWhite" id="board">
-      <div class="Panel-title">
-        <div class="Panel-titleImage"></div>
-        <div class="Panel-heading">Our</div>
-        <div class="Panel-subHeading">board</div>
-      </div>
-      <div class="Grid">
-        <div class="Grid-cell Grid--withMargin">
-          <div class="Person Person--dark">
-            <img class="Person-image" src="images/linoamaral.png"/></img>
-            <div class="Person-information">
-              <div class="Person-name">LINO M. AMARAL</div>
-              <div class="Person-company">Luso-American Life Insurance Society</div>
-              <div class="Person-job">CEO</div>
-              <a href="https://www.linkedin.com/in/linoamaral" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="Person Person--dark">
-            <img class="Person-image" src="images/nunogoncalves.png"/></img>
-            <div class="Person-information">
-              <div class="Person-name">NUNO GONÇALVES PEDRO</div>
-              <div class="Person-company">Strive Capital</div>
-              <div class="Person-job">Managing Partner</div>
-              <a href="https://www.linkedin.com/pub/nuno-goncalves-pedro/0/32a/697" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell Grid--withMargin">
-          <div class="Person Person--dark">
-            <img class="Person-image" src="images/torbenrankine.png"/></img>
-            <div class="Person-information">
-              <div class="Person-name">TORBEN RANKINE</div>
-              <div class="Person-company">Leadership Business Consulting</div>
-              <div class="Person-job">Country Manager</div>
-              <a href="https://www.linkedin.com/in/torbenrankine" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="Person Person--dark">
-            <img class="Person-image" src="images/joaometelo.png"/></img>
-            <div class="Person-information">
-              <div class="Person-name">JOÃO METELO</div>
-              <div class="Person-company">Principle Power</div>
-              <div class="Person-job">CEO</div>
-              <a href="https://www.linkedin.com/pub/joão-metelo/72/924/632" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell Grid--withMargin">
-          <div class="Person Person--dark Person--noMargin">
-            <img class="Person-image" src="images/nunomathias.png"/></img>
-            <div class="Person-information">
-              <div class="Person-name">NUNO MATHIAS</div>
-              <div class="Person-company">Consulate General of Portugal in San Francisco</div>
-              <div class="Person-job">Consul General</div>
-              <a href="https://www.linkedin.com/pub/nuno-mathias/54/1a0/507/en" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="Person Person--dark Person--noMargin">
-            <img class="Person-image" src="images/bernardoseabra.png"/></img>
-            <div class="Person-information">
-              <div class="Person-name">Bernardo de Seabra</div>
-              <div class="Person-company">BrightRoll</div>
-              <div class="Person-job">Software Engineer</div>
-              <a target="_blank" href="https://www.linkedin.com/in/bseabra"><img class="Person-link" src="images/linkedin@2x.png"/></a>
-            </div>
-          </div>
-        </div>
       </div>
     </section>
 
