--- a/app/team.html
+++ b/app/team.html
@@ -228,17 +228,55 @@
       </div>
     </section>
 
-    <section class="Footer">
+  <section class="Footer">
       <div class="Footer-column">
         <div class="Logo Logo--half"></div>
         <p class="Footer-content">
-          Bridging Portugal and Silicon Valley
+          Bridging Portugal <br />
+          and Silicon Valley
         </p>
+        <div class="u-marginSmall"></div>
         <div>
-          <a href="https://www.facebook.com/thewesttowest/?fref=ts" target="_blank"><img class="Footer-socialIcon" src="images/facebook-icon.png"/></a>
+          <a href="https://www.facebook.com/thewesttowest/?fref=ts" target="_blank"><img class="Footer-socialIcon Footer-socialIcon--withMargin" src="images/facebook-icon.png"/></a>
           <a href="https://twitter.com/TheWesttoWest" target="_blank"><img class="Footer-socialIcon" src="images/twitter-icon.png"/></a>
         </div>
       </div>
+
+      <div class="u-hideOnMobile">
+        <div class="Footer-column">
+            <div class="Footer-links">
+              <a class="Footer-link" href="#mission">
+                Mission
+              </a>
+              <a class="Footer-link u-marginSmall" href="#services">
+                What We Offer
+              </a>
+              <a class="Footer-link u-marginSmall" href="#newsletter">
+                Get Involved
+              </a>
+              <a class="Footer-link u-marginSmall" href="#officers">
+                Officers
+              </a>
+            </div>
+        </div>
+      </div>
+
+      <div class="u-hideOnMobile">
+        <div class="Footer-column">
+          <div class="Footer-links">
+              <a class="Footer-link" href="#board">
+                Board
+              </a>
+              <a class="Footer-link u-marginSmall" href="#sponsors">
+                Sponsors and Partners
+              </a>
+              <a class="Footer-link u-marginSmall" href="experts.html">
+                Experts
+              </a>
+          </div>
+        </div>
+      </div>
+
       <div class="Footer-column">
         <a href="https://subvisual.co" target="_blank" class="Footer-credits">
           HANDCRAFTED BY
