Fix names in Testimonials and Officers & Board page

--- a/app/index.html
+++ b/app/index.html
@@ -225,7 +225,7 @@
                   </p>
                   <hr class="Testimonial-separator u-marginSmall" />
                   <div class="Testimonial-author u-marginSmall">
-					          Helder Machado
+					          Helder M.
 				          </div>
                   <div class="Testimonial-authorBackground">
 					          Founder at Hunting Health
@@ -428,7 +428,7 @@
         </div>
       </div>
       <div class="u-marginHalf">
-        <a href="/team.html" target="_blank" class="Button Button--outline">See Full Team</a>
+        <a href="/team.html" class="Button Button--outline">See Full Team</a>
       </div>
     </section>
 
